Add main.css for styling and link it in the App component

--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -9,7 +9,7 @@ title = "hello-dioxus"
 [web.resource]
 
 # Additional CSS style files
-style = []
+style = ["/assets/main.css"]
 
 # Additional JavaScript files
 script = []
