--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.6.0", features = ["router"] }
+reqwest = { version = "0.12.18", features = ["json"] }
+serde = { version = "1.0.219", features = ["derive"] }
 
 [features]
 default = ["web"]
